Add OTP codes generation

--- a/src/main/resources/application.example.properties
+++ b/src/main/resources/application.example.properties
@@ -13,3 +13,11 @@ spring.sql.init.schema-locations=classpath:schema.sql
 
 # Logging
 logging.level.org.springframework=INFO
+
+# JWT
+jwt.secret=mysupersecurekeywith256bitlong!!
+jwt.expiration=3600000
+
+# OTP Code
+otp.code.length=6
+otp.code.ttl-seconds=300
