--- a/src/main/resources/application.example.properties
+++ b/src/main/resources/application.example.properties
@@ -1,7 +1,11 @@
+# ========================================
 # Server settings
+# ========================================
 server.port=8081
 
+# ========================================
 # PostgreSQL database settings (sample)
+# ========================================
 spring.datasource.url=jdbc:postgresql://localhost:5432/otp
 spring.datasource.username=your_username
 spring.datasource.password=your_password
@@ -11,13 +15,49 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 
-# Logging
+# ========================================
+# Logging settings
+# ========================================
 logging.level.org.springframework=INFO
 
-# JWT
+# ========================================
+# JWT settings
+# ========================================
 jwt.secret=mysupersecurekeywith256bitlong!!
 jwt.expiration=3600000
 
-# OTP Code
+# ========================================
+# OTP Code settings
+# ========================================
 otp.code.length=6
 otp.code.ttl-seconds=300
+otp.delivery.channel=FILE
+otp.file.name=otp_codes.txt
+
+# ========================================
+# Telegram Bot configuration
+# ========================================
+telegram.bot.token=YOUR_TELEGRAM_BOT_TOKEN
+telegram.chat.id=YOUR_CHAT_ID
+
+# ========================================
+# SMPP Emulator configuration
+# ========================================
+smpp.host=localhost
+smpp.port=2775
+smpp.system_id=smppclient1
+smpp.password=password
+smpp.system_type=OTP
+smpp.source_addr=OTPService
+
+# ========================================
+# Email server configuration
+# ========================================
+email.username=dummy@example.com
+email.password=dummy_password
+email.from=dummy@example.com
+
+mail.smtp.host=smtp.example.com
+mail.smtp.port=587
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
