--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 src/main/resources/application.properties
 src/main/resources/email.properties
 src/main/resources/sms.properties
+src/main/resources/telegram.properties
 
 # Ignore build artifacts
 /target/
