--- a/src/main/resources/application.example.properties
+++ b/src/main/resources/application.example.properties
@@ -1,3 +1,5 @@
+spring.application.name=otpservice
+
 # ========================================
 # Server settings
 # ========================================
@@ -13,12 +15,14 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Initialize schema
 spring.sql.init.mode=always
+spring.sql.init.platform=postgres
 spring.sql.init.schema-locations=classpath:schema.sql
 
 # ========================================
 # Logging settings
 # ========================================
 logging.level.org.springframework=INFO
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
 
 # ========================================
 # JWT settings
@@ -29,8 +33,12 @@ jwt.expiration=3600000
 # ========================================
 # OTP Code settings
 # ========================================
+#otp.delivery.channel=FILE
+otp.delivery.channel=TELEGRAM
+#otp.delivery.channel=EMAIL
+#otp.delivery.channel=SMS
 otp.code.length=6
 otp.code.ttl-seconds=300
-otp.delivery.channel=FILE
 otp.file.name=otp_codes.txt
 
+spring.config.import=classpath:email.properties,classpath:sms.properties,classpath:telegram.properties
